<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Место памяти</string>
    <string name="select_start_date">Дата от</string>
    <string name="select_end_date">Дата до</string>
    <string name="delete_family_tree_title">Удалить генеалогическое дерево</string>
    <string name="delete_family_tree_message">Вы уверены, что хотите удалить это генеалогическое дерево? Это действие нельзя отменить.</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="select_memorial">Выберите мемориал</string>
    <string name="source_memorial">Исходный мемориал</string>
    <string name="target_memorial">Целевой мемориал</string>
    <string name="relation_type">Тип связи</string>
    <string name="tree_name">Название</string>
    <string name="tree_description">Описание</string>
    <string name="tree_owner">Владелец: %s</string>
    <string name="is_public">Публичный доступ</string>
    <string name="public_tree">Публичное</string>
    <string name="private_tree">Приватное</string>
    <string name="add_memorial_title">Добавить мемориал</string>
    <string name="add_relation_title">Добавить связь</string>
    <string name="add">Добавить</string>
    <string name="edit_tree">Редактировать дерево</string>
    <string name="title_memorials">Мемориалы</string>
    <string name="title_family_trees">Древо</string>
    <string name="title_map">Карта</string>
    <string name="title_notifications">Уведомления</string>
    <string name="no_notifications">Нет уведомлений</string>
    <string name="title_profile">Профиль</string>
    <string name="add_family_tree">Добавить древо</string>
    <string name="edit">Редактировать</string>
    <string name="created_at">Создано: %s</string>
    <string name="memorial_count">Мемориалов: %d</string>
    <string name="tree_created_at">Создано: %s</string>
    <string name="tab_incoming">Входящие</string>
    <string name="tab_outgoing">Исходящие</string>
    <string name="notification_icon">Иконка уведомления</string>
    
    <!-- User Agreement Text -->
    <string name="user_agreement_text">
        <![CDATA[
        <b>ПОЛЬЗОВАТЕЛЬСКОЕ СОГЛАШЕНИЕ</b><br/><br/>
        
        <b>1. ОБЩИЕ ПОЛОЖЕНИЯ</b><br/>
        1.1. Настоящее Пользовательское соглашение (далее – «Соглашение») определяет условия использования приложения «АИС Место памяти» (далее – «Приложение»).<br/>
        1.2. Использование Приложения означает полное согласие с условиями данного Соглашения.<br/>
        1.3. Если Вы не согласны с условиями Соглашения, не используйте Приложение.<br/><br/>
        
        <b>2. ПРЕДМЕТ СОГЛАШЕНИЯ</b><br/>
        2.1. Приложение предназначено для создания и ведения электронных мемориалов, генеалогических деревьев и сохранения памяти о близких людях.<br/>
        2.2. Функциональность включает: создание мемориалов, добавление фотографий и документов, создание семейных связей, публикацию информации.<br/><br/>
        
        <b>3. РЕГИСТРАЦИЯ И УЧЕТНЫЕ ДАННЫЕ</b><br/>
        3.1. Для полного использования Приложения необходима регистрация.<br/>
        3.2. Вы обязуетесь предоставлять достоверную информацию при регистрации.<br/>
        3.3. Вы несете ответственность за сохранность своих учетных данных.<br/><br/>
        
        <b>4. ОБРАБОТКА ПЕРСОНАЛЬНЫХ ДАННЫХ</b><br/>
        4.1. Администрация Приложения обрабатывает персональные данные в соответствии с законодательством РФ.<br/>
        4.2. Регистрируясь, Вы даете согласие на обработку своих персональных данных.<br/>
        4.3. Мы не передаем персональные данные третьим лицам без Вашего согласия.<br/><br/>
        
        <b>5. ПРАВИЛА ИСПОЛЬЗОВАНИЯ</b><br/>
        5.1. Запрещается размещение недостоверной, оскорбительной или незаконной информации.<br/>
        5.2. Запрещается нарушение авторских прав при размещении фотографий и текстов.<br/>
        5.3. Администрация имеет право модерировать контент и удалять нарушающие материалы.<br/><br/>
        
        <b>6. ОТВЕТСТВЕННОСТЬ</b><br/>
        6.1. Администрация не несет ответственности за достоверность размещаемой пользователями информации.<br/>
        6.2. Пользователь несет полную ответственность за размещаемый контент.<br/><br/>
        
        <b>7. ЗАКЛЮЧИТЕЛЬНЫЕ ПОЛОЖЕНИЯ</b><br/>
        7.1. Соглашение может быть изменено Администрацией в одностороннем порядке.<br/>
        7.2. Продолжение использования Приложения после изменений означает согласие с новыми условиями.<br/><br/>
        
        <i>Дата последнего обновления: 10 июня 2025 г.</i>
        ]]>
    </string>
</resources>